# verbose-octo-potato

./: .gitignore  CMakeLists.txt  README.md  install_potato_client_service.sh
client/: CMakeLists.txt  CMakePresets.json  README.md
client/cmake/toolchains/: aarch64-linux-gnu.cmake
client/include/mms_monitor/: at_controller.hpp  mms_monitor.hpp  potato_client.hpp  serial_interface.hpp
client/src/: at_controller.cpp  main.cpp  potato_client.cpp  serial_interface.cpp
client/tests/: CMakeLists.txt  test_smoke.cpp
cmake/: MMSMonitorConfig.cmake.in
include/mms_monitor/: at_controller.hpp
prompts/: at_controller.md  potato_client.md  serial_interface.md  web_server.md
server/: README.md  manage.py
server/potato/: admin.py  apps.py  models.py  urls.py  views.py
server/potato/templates/Potato/: view.html
server/potato/templates/potato/: view.html
server/potato_server/: settings.py  urls.py  wsgi.py
src/: at_controller.cpp  main.cpp  mms_monitor.cpp
